--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,71 @@
+annotated-types==0.7.0
+anyio==4.10.0
+blinker==1.9.0
+certifi==2025.8.3
+cffi==1.17.1
+charset-normalizer==3.4.3
+click==8.2.1
+click-log==0.4.0
+colorama==0.4.6
+cryptography==45.0.6
+deprecation==2.1.0
+docutils==0.22
+dotenv==0.9.9
+dotty-dict==1.3.1
 Flask==2.3.3
-supabase==1.0.3
+gitdb==4.0.12
+GitPython==3.1.45
+gotrue==1.3.1
+gunicorn==23.0.0
+h11==0.14.0
+httpcore==0.16.3
+httpx==0.23.3
+idna==3.10
+importlib_metadata==8.7.0
+invoke==1.7.3
+itsdangerous==2.2.0
+jaraco.classes==3.4.0
+jaraco.context==6.0.1
+jaraco.functools==4.3.0
+jeepney==0.9.0
+Jinja2==3.1.6
+keyring==25.6.0
+MarkupSafe==3.0.2
+more-itertools==10.7.0
+nh3==0.3.0
+packaging==25.0
+pkginfo==1.12.1.2
+postgrest==0.10.7
+pycparser==2.22
+pydantic==2.11.7
+pydantic_core==2.33.2
+Pygments==2.19.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
+python-gitlab==3.15.0
 python-multipart==0.0.6
+python-semantic-release==7.33.2
+readme_renderer==44.0
+realtime==1.0.6
+requests==2.32.5
+requests-toolbelt==1.0.0
+rfc3986==1.5.0
+SecretStorage==3.3.3
+semver==2.13.0
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+storage3==0.5.3
+StrEnum==0.4.15
+supabase==1.0.3
+supafunc==0.2.2
+tomlkit==0.13.3
+tqdm==4.67.1
+twine==3.8.0
+typing-inspection==0.4.1
+typing_extensions==4.15.0
+urllib3==2.5.0
+websockets==12.0
+Werkzeug==3.1.3
+wheel==0.45.1
+zipp==3.23.0
