--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,10 @@ Thumbs.db
 # Database
 *.db
 *.sqlite3
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
